force-app/main/default/objects/Lead/fields/Applied_Job_Position__c.field-meta.xml
<CustomField>
    <fullName>Applied_Job_Position__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Applied Job Position</label>
    <referenceTo>Job_Position__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>