force-app/main/default/objects/Lead/fields/Assigned_Interviewer__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Interviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Interviewer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Id</field>
            <operation>equals</operation>
            <value>00Eg5000002cFmTEAU</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>