force-app/main/default/objects/Lead/fields/Education_Score__c.field-meta.xml
<CustomField>
    <fullName>Education_Score__c</fullName>
    <formula>CASE(
  TEXT(Education_Level__c),
  &quot;PhD&quot;, 40,
  &quot;Master&quot;, 35,
  &quot;Bachelor&quot;, 30,
  &quot;High School&quot;, 20,
  &quot;Other&quot;, 10,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Education Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>