force-app/main/default/objects/Lead/fields/Experience_Score__c.field-meta.xml
<CustomField>
    <fullName>Experience_Score__c</fullName>
    <formula>IF(
  ISBLANK(Years_of_Experience__c),
  0,
  IF(
    Years_of_Experience__c &gt;= 10,
    60,
    IF(
      Years_of_Experience__c &gt;= 5,
      45,
      IF(
        Years_of_Experience__c &gt;= 2,
        30,
        IF(
          Years_of_Experience__c &gt;= 1,
          20,
          10
        )
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Experience Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>