force-app/main/default/objects/Lead/fields/Initial_Score__c.field-meta.xml
<CustomField>
    <fullName>Initial_Score__c</fullName>
    <formula>IF(
  Experience_Score__c + Education_Score__c &gt; 100,
  100,
  Experience_Score__c + Education_Score__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>