force-app/main/default/objects/Lead/fields/Years_of_Experience__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Experience__c</fullName>
    <label>Years of Experience</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>