force-app/main/default/objects/Lead/validationRules/VR_Lead_Applied_Job_Position_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Lead_Applied_Job_Position_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Applied_Job_Position__c)</errorConditionFormula>
    <errorDisplayField>Applied_Job_Position__c</errorDisplayField>
    <errorMessage>Applied Job Position is required.</errorMessage>
</ValidationRule>