force-app/main/default/objects/Lead/validationRules/VR_Lead_Education_Level_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Lead_Education_Level_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Education_Level__c))</errorConditionFormula>
    <errorDisplayField>Education_Level__c</errorDisplayField>
    <errorMessage>Education Level is required.</errorMessage>
</ValidationRule>