force-app/main/default/objects/Lead/validationRules/VR_Lead_Years_Experience_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Lead_Years_Experience_Range</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  Years_of_Experience__c &lt; 0,
  Years_of_Experience__c &gt; 60
)</errorConditionFormula>
    <errorDisplayField>Years_of_Experience__c</errorDisplayField>
    <errorMessage>Years of Experience must be between 0 and 60.</errorMessage>
</ValidationRule>